gccida/c0/local_alloc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:806:1: error: use of undeclared identifier 'recorded_label_ref_0'; did you mean 'recorded_label_ref'?
recorded_label_ref_0 = 0; 
^~~~~~~~~~~~~~~~~~~~
recorded_label_ref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:276:12: note: 'recorded_label_ref' declared here
static int recorded_label_ref;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:810:1: error: use of undeclared identifier 'qty_0'
qty_0 = (  struct qty *)xmalloc( 44LL * ( max_regno - 53)); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:825:1: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
next_qty_0 = max_qty; 
^~~~~~~~~~
next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:828:6: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
if ( next_qty_0 >= 6 ) 
     ^~~~~~~~~~
     next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:830:38: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
memset( qty_phys_copy_sugg, 0, 8LL * next_qty_0); 
                                     ^~~~~~~~~~
                                     next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:831:42: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
memset( qty_phys_num_copy_sugg, 0, 2LL * next_qty_0); 
                                         ^~~~~~~~~~
                                         next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:832:33: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
memset( qty_phys_sugg, 0, 8LL * next_qty_0); 
                                ^~~~~~~~~~
                                next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:833:37: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
memset( qty_phys_num_sugg, 0, 2LL * next_qty_0); 
                                    ^~~~~~~~~~
                                    next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:837:20: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
for ( ia = 0; ia < next_qty_0; ++ia ) 
                   ^~~~~~~~~~
                   next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:845:1: error: use of undeclared identifier 'next_qty_0'; did you mean 'next_qty'?
next_qty_0 = 0; 
^~~~~~~~~~
next_qty
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:81:12: note: 'next_qty' declared here
static int next_qty;
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:848:7: error: use of undeclared identifier 'qty_0'
free( qty_0); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:856:8: error: use of undeclared identifier 'recorded_label_ref_0'; did you mean 'recorded_label_ref'?
return recorded_label_ref_0; 
       ^~~~~~~~~~~~~~~~~~~~
       recorded_label_ref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/local-alloc.c:276:12: note: 'recorded_label_ref' declared here
static int recorded_label_ref;
           ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/local_alloc/src/obj/local-alloc.o] Error 1
